--- a/lib/scss/validation-field.scss
+++ b/lib/scss/validation-field.scss
@@ -1,4 +1,5 @@
 // Colors
+$validation-field-focus: #999;
 $validation-field-error-color: red !default;
 $validation-field-error-border-color: rgba(red, 0.6) !default;
 $validation-field-success-color: green !default;
@@ -12,6 +13,8 @@ $validation-field-tooltip-font-size: 16px !default;
 // Others
 $validation-field-icon-z-index: 3 !default;
 
+// React-select
+$select-input-border-focus: $validation-field-focus;
 
 @mixin validation-status($color, $border-color, $icon) {
 
@@ -23,19 +26,21 @@ $validation-field-icon-z-index: 3 !default;
   input[type="email"],
   input[type="number"],
   input[type="search"],
-  select,
-  .input-group-addon {
-    &, &:focus {
-      border: 1px solid $border-color;
+  select {
+    border: 1px solid $border-color;
+
+    &:focus {
+      border: 1px solid $validation-field-focus;
     }
   }
 
   // React-Select
-  .Select-control,
-  .Select.is-focused .Select-control {
+  .Select-control {
     border: 1px solid $border-color;
-    input:focus {
+
+    input {
       border: 0;
+      outline: none;
     }
   }
 
@@ -75,10 +80,6 @@ $validation-field-icon-z-index: 3 !default;
 .validation-field {
   position: relative;
 
-  input, input[type="text"] {
-    padding-right: 32px; // Magic number to give some space to validity icon
-  }
-
   &--error {
     @include validation-error()
   }
@@ -91,8 +92,17 @@ $validation-field-icon-z-index: 3 !default;
     right: 52px; // Magic number to avoid icon overlapping on datepicker icon
   }
 
-  &--no-icons:after {
-    display: none;
+  &:after {
+    visibility: hidden;
+  }
+
+  &--with-icons {
+    &:after {
+      visibility: visible;
+    }
+    input, input[type="text"] {
+      padding-right: 32px; // Magic number to give some space to validity icon
+    }
   }
 
 }
