--- a/lib/scss/validation-field.scss
+++ b/lib/scss/validation-field.scss
@@ -12,11 +12,13 @@ $validation-field-tooltip-font-size: 16px !default;
 
 // Others
 $validation-field-icon-z-index: 3 !default;
+$validation-field-error-border-size: 2px;
+$validation-field-success-border-size: 1px;
 
 // React-select
 $select-input-border-focus: $validation-field-focus;
 
-@mixin validation-status($color, $border-color, $icon) {
+@mixin validation-status($color, $border-color, $icon, $border-size) {
 
   // Input field inside validation-field
   input,
@@ -27,16 +29,16 @@ $select-input-border-focus: $validation-field-focus;
   input[type="number"],
   input[type="search"],
   select {
-    border: 1px solid $border-color;
+    border: $border-size solid $border-color;
 
     &:focus {
-      border: 1px solid $validation-field-focus;
+      border: $border-size solid $validation-field-focus;
     }
   }
 
   // React-Select
   .Select-control {
-    border: 1px solid $border-color;
+    border: $border-size solid $border-color;
 
     input {
       border: 0;
@@ -63,7 +65,7 @@ $select-input-border-focus: $validation-field-focus;
 }
 
 @mixin validation-error {
-  @include validation-status($validation-field-error-color, $validation-field-error-border-color, $fa-var-exclamation-triangle);
+  @include validation-status($validation-field-error-color, $validation-field-error-border-color, $fa-var-exclamation-triangle, $validation-field-error-border-size);
 
   // Exception for checkbox
   &.validation-field--checkbox {
@@ -74,7 +76,7 @@ $select-input-border-focus: $validation-field-focus;
 }
 
 @mixin validation-success {
-  @include validation-status($validation-field-success-color, $validation-field-success-border-color, $fa-var-check);
+  @include validation-status($validation-field-success-color, $validation-field-success-border-color, $fa-var-check, $validation-field-success-border-size);
 }
 
 .validation-field {
