--- a/lib/scss/validation-field.scss
+++ b/lib/scss/validation-field.scss
@@ -14,9 +14,13 @@ $validation-field-tooltip-font-size: 16px !default;
 $validation-field-icon-font-size: 16px !default;
 $validation-field-count-font-size: 14px !default;
 
+$validation-field-label-height: 20px !default;
+
 // Others
+$validation-field-label-margin-bottom: 2px;
 $validation-field-icon-z-index: 3 !default;
 $validation-field-icon-top: 11px !default;
+$validation-field-with-label-icon-top: $validation-field-icon-top + $validation-field-label-height + $validation-field-label-margin-bottom !default;
 $validation-field-icon-right: 10px !default;
 $validation-field-count-margin: 0 0 16px 0 !default;
 
@@ -113,6 +117,12 @@ $select-input-border-focus: $validation-field-focus;
     }
   }
 
+  &--with-label {
+    .validation-field__icon {
+      top: $validation-field-with-label-icon-top;
+    }
+  }
+
   /**
    * Sub components
    */
@@ -163,6 +173,11 @@ $select-input-border-focus: $validation-field-focus;
   &__chars-left {
     font-size: $validation-field-count-font-size;
     margin: $validation-field-count-margin;
+  }
+
+  &__label {
+    height: $validation-field-label-height;
+    margin-bottom: $validation-field-label-margin-bottom;
   }
 
 }
