--- a/lib/scss/validation-field.scss
+++ b/lib/scss/validation-field.scss
@@ -21,7 +21,7 @@ $validation-field-label-margin-bottom: 2px;
 $validation-field-icon-z-index: 3 !default;
 $validation-field-icon-top: 11px !default;
 $validation-field-icon-right: 10px !default;
-$validation-field-count-margin: 0 0 16px 0 !default;
+$validation-field-count-margin: -16px 0 16px 0 !default;
 
 // React-select
 $select-input-border-focus: $validation-field-focus;
@@ -36,6 +36,7 @@ $select-input-border-focus: $validation-field-focus;
   input[type="email"],
   input[type="number"],
   input[type="search"],
+  textarea,
   select {
     border: $border-size solid $border-color;
 
@@ -98,19 +99,6 @@ $select-input-border-focus: $validation-field-focus;
     }
     input, input[type="text"] {
       padding-right: 32px; // Magic number to give some space to validity icon
-    }
-  }
-
-  &--with-count {
-    input,
-    input[type="text"],
-    input[type="password"],
-    input[type="date"],
-    input[type="email"],
-    input[type="number"],
-    input[type="search"],
-    select {
-      margin-bottom: 2px;
     }
   }
 
